mapbox embed templates

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 	<script>
 
 		async function loadPyramids() {
-  			const response = await fetch('/data/pyramids.geojson', {
+  			const response = await fetch('data/pyramids.geojson', {
 				method: 'GET'
 			});
 
