--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <h1>DES396 P3: Scrollytelling</h1>
 
 <p><a target="_blank" href="https://lehigh-university-design.github.io/mapping-Bainsjah/">Jahan Bains</a></p>
-<p><a target="_blank" href="https://lehigh-university-design.github.io//">Todd Benowitz</a></p>
+<p><a target="_blank" href="https://lehigh-university-design.github.io/mapping-ToddBenowitz/">Todd Benowitz</a></p>
 <p><a target="_blank" href="https://lehigh-university-design.github.io/mapping-ouiMalika/">Malika Buribayeva</a></p>
 <p><a target="_blank" href="https://lehigh-university-design.github.io/mapping-culbe/">Matt Culbertson</a></p>
 <p><a target="_blank" href="https://lehigh-university-design.github.io/mapping-deeksha8952/">Deeksha Jonnalagadda</a></p>
