--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
 <p><a target="_blank" href="https://lehigh-university-design.github.io/mapping-ToddBenowitz/">Todd Benowitz</a></p>
 <p><a target="_blank" href="https://lehigh-university-design.github.io/mapping-ouiMalika/">Malika Buribayeva</a></p>
 <p><a target="_blank" href="https://lehigh-university-design.github.io/mapping-culbe/">Matt Culbertson</a></p>
-<p><a target="_blank" href="https://lehigh-university-design.github.io/mapping-deeksha8952/">Deeksha Jonnalagadda</a></p>
+<!--<p><a target="_blank" href="https://lehigh-university-design.github.io/mapping-deeksha8952/">Deeksha Jonnalagadda</a></p>-->
 <p><a target="_blank" href="https://lehigh-university-design.github.io/mapping-sar426/">Samia Rahman</a></p>
 <p><a target="_blank" href="https://lehigh-university-design.github.io/mapping-sit225/">Savannah Thomas</a></p>
-<p><a target="_blank" href="https://lehigh-university-design.github.io/mapping-Miz224/">Michelle Zhang</a></p>
+<!--<p><a target="_blank" href="https://lehigh-university-design.github.io/mapping-Miz224/">Michelle Zhang</a></p>-->
 	
 </body>
 
